NF: adding seaborn to the soup

--- a/master.cfg
+++ b/master.cfg
@@ -667,6 +667,11 @@ statsmodels_bot = GithubBot('statsmodels', 'statsmodels',
     built_doc_src = "docs/build",
     pip_depends = ('nose', 'patsy>=0.1.0',),
 )
+# seaborn bot
+seaborn_bot = GithubBot('mwaskom', 'seaborn',
+    test_cmd = shlex.split('xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" nosetests --verbosity=3 --exe -s seaborn'),
+    pip_depends = ('nose',),
+)
 # pymvpa bot, primarily for sparc testing
 pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe -s mvpa2'),
@@ -676,7 +681,7 @@ pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
     pip_depends = ('nose',),
     build_timeout = 3600, # allow for its longer testing especially for sparcs.
 )
-# statsmodels bot, primarily for sparc testing
+# sklearn bot, primarily for sparc testing
 sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
     test_cmd = shlex.split('nosetests --verbosity=3 --exe -s sklearn'),
     doc_build_cmd = "make -C doc html",
@@ -730,6 +735,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nipype_bot,
                                                regreg_bot,
                                                statsmodels_bot,
+                                               seaborn_bot,
                                                pymvpa_bot,
                                                sklearn_bot,
                                                sympy_bot,
@@ -846,6 +852,13 @@ c['schedulers'] = sum([
                         #'statsmodels-py3.x-sid-sparc',
                         'statsmodels-py2.7-wheezy-sparc',
                         #'statsmodels-py3.x-wheezy-sparc',
+                        ]),
+    seaborn_bot.schedulers([
+                        # pandas not installable on sparc due to missing build of pytables
+                        'seaborn-py2.x-sid-sparc',
+                        #'seaborn-py3.x-sid-sparc',
+                        'seaborn-py2.7-wheezy-sparc',
+                        #'seaborn-py3.x-wheezy-sparc',
                         ]),
     sklearn_bot.schedulers([
                         'sklearn-py2.x-sid-sparc',
@@ -1488,6 +1501,11 @@ c['builders'] += statsmodels_bot.build_builders(
     (('statsmodels-py2.x-sid-sparc', sparc_slaves_sid),
      ('statsmodels-py2.7-wheezy-sparc', sparc_slaves_wheezy)),
     post_cmds=("python -c 'from statsmodels.tools.print_version import show_versions; show_versions()'",))
+# Seaborn
+c['builders'] += seaborn_bot.build_builders(
+    (('seaborn-py2.x-sid-sparc', sparc_slaves_sid),
+     ('seaborn-py2.7-wheezy-sparc', sparc_slaves_wheezy)),
+    )
 ## and python3 builders
 #c['builders'] += statsmodels_bot.build_builders(
 #    (('statsmodels-py3.x-sid-sparc', sparc_slaves_sid),
@@ -1674,8 +1692,8 @@ def test_fail2ban_08_state(c):
     assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
 
 def test_regression(c):
-    assert(len(c['builders']) == 160)
-    assert(len(c['schedulers']) == 217)
+    assert(len(c['builders']) == 162)
+    assert(len(c['schedulers']) == 220)
     #print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
