ENH: adding mail notifier for seaborn to report on failing builds

--- a/master.cfg
+++ b/master.cfg
@@ -1600,6 +1600,12 @@ mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
 
 c['status'].append(mn)
 
+c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
+                      mode='failing',
+                      categories=('seaborn',),
+                      sendToInterestedUsers=True,
+                      extraRecipients=['site-buildbot-nipy@onerussian.com']))
+
 # Allow builds to be triggered via the web forms
 sympy_release_filter = ChangeFilter(category="release", repository="sympy")
 rel_sched = SingleBranchScheduler(name="sympy-release",
