RF: make build_builders setup schedulers for seaborn

--- a/master.cfg
+++ b/master.cfg
@@ -853,13 +853,6 @@ c['schedulers'] = sum([
                         'statsmodels-py2.7-wheezy-sparc',
                         #'statsmodels-py3.x-wheezy-sparc',
                         ]),
-    seaborn_bot.schedulers([
-                        # pandas not installable on sparc due to missing build of pytables
-                        'seaborn-py2.x-sid-sparc',
-                        #'seaborn-py3.x-sid-sparc',
-                        'seaborn-py2.7-wheezy-sparc',
-                        #'seaborn-py3.x-wheezy-sparc',
-                        ]),
     sklearn_bot.schedulers([
                         'sklearn-py2.x-sid-sparc',
                         # not yet
@@ -1505,6 +1498,7 @@ c['builders'] += statsmodels_bot.build_builders(
 c['builders'] += seaborn_bot.build_builders(
     (('seaborn-py2.x-sid-sparc', sparc_slaves_sid),
      ('seaborn-py2.7-wheezy-sparc', sparc_slaves_wheezy)),
+    schedulers=c['schedulers']
     )
 ## and python3 builders
 #c['builders'] += statsmodels_bot.build_builders(
