ENH: add notifier for pymvpa + RF previous definition for sympy for consistent appearance

--- a/master.cfg
+++ b/master.cfg
@@ -1586,17 +1586,21 @@ c['status'] = []
 from buildbot.status import html, mail
 from buildbot.status.web import auth, authz
 
-mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
+c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
                       categories=('sympy',),
                       sendToInterestedUsers=False,
-                      extraRecipients=['asmeurer@gmail.com'])
-
-c['status'].append(mn)
+                      extraRecipients=['asmeurer@gmail.com']))
 
 c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
                       categories=('seaborn',),
+                      sendToInterestedUsers=True,
+                      extraRecipients=['site-buildbot-nipy@onerussian.com']))
+
+c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
+                      mode='failing',
+                      categories=('pymvpa',),
                       sendToInterestedUsers=True,
                       extraRecipients=['site-buildbot-nipy@onerussian.com']))
 
