BF: invoke virtualenv from a new directory to preclude older easy_install reading/following setup.cfg
Seems to work fine across platforms:
http://nipy.bic.berkeley.edu/builders/fail2ban-py2.7-win7_0.8/builds/0/steps/shell_1/logs/stdio

yoh@mike /cygdrive/c/buildslaves/mike-win7-64/fail2ban-py2_7-win7_master/mk_venv
$ cd ../venv/

yoh@mike /cygdrive/c/buildslaves/mike-win7-64/fail2ban-py2_7-win7_master/venv
$ ls -R
.:
Include  Lib  Scripts

--- a/master.cfg
+++ b/master.cfg
@@ -301,10 +301,16 @@ class GithubBot(object):
 
     def _make_virtualenv(self, factory, python=None, install_pip=True):
         # Obviously requires virtualenv on the slave
-        venv_params = ['--distribute', '--system-site-packages', 'venv']
+        # Because of the bug in elderly easy_install, it would take into
+        # account settings present in setup.cfg and might try to install
+        # under /usr/lib as happened with fail2ban bot.  So deploy virtualenv
+        # while stepping into a new clean directory.
+        factory.addStep(ShellCommand(command=['mkdir', '-p', 'mk_venv']))
+        venv_params = ['--distribute', '--system-site-packages', '../venv']
         if not python is None:
             venv_params = ['--python=' + python] + venv_params
-        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params))
+        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params,
+                                     workdir='mk_venv'))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -1671,7 +1677,8 @@ def _select_builders(builders, regex):
 def _test_easy_and_no_easy(c, regex, command, expect=True):
     for builder in _select_builders(c['builders'], regex):
         # 2nd one is virtualenv always
-        assert(builder.factory.steps[1].kwargs['command'][0] == 'virtualenv')
+        assert(builder.factory.steps[1].kwargs['command'][0] == 'mkdir')
+        assert(builder.factory.steps[2].kwargs['command'][0] == 'virtualenv')
         for step in builder.factory.steps:
             if command in step.kwargs.get('command', []):
                 if expect:
@@ -1696,6 +1703,8 @@ def test_fail2ban_08_state(c):
     assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
 
 def test_regression(c):
+    print "# builders:   ", len(c['builders'])
+    print "# schedulers: ", len(c['schedulers'])
     assert(len(c['builders']) == 162)
     assert(len(c['schedulers']) == 220)
     #print [sc.name for sc in c['schedulers']]
