--- a/master.cfg
+++ b/master.cfg
@@ -1610,6 +1610,12 @@ c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       sendToInterestedUsers=True,
                       extraRecipients=['site-buildbot-nipy@onerussian.com']))
 
+c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
+                      mode='failing',
+                      categories=('fail2ban',),
+                      sendToInterestedUsers=False,
+                      extraRecipients=['fail2ban-buildbots@lists.sourceforge.net']))
+
 # Allow builds to be triggered via the web forms
 sympy_release_filter = ChangeFilter(category="release", repository="sympy")
 rel_sched = SingleBranchScheduler(name="sympy-release",
