BF: when calling virtualenv use build/mk_venv not just mk_venv
'build' is the default workdir, if we provide a custom value then it
does not lie under build, thus venv is not populated where expected
under build/venv.  Also ShellCommand seems to create the workdir if
not present, thus do not bother to mkdir it manually first.

--- a/master.cfg
+++ b/master.cfg
@@ -305,12 +305,11 @@ class GithubBot(object):
         # account settings present in setup.cfg and might try to install
         # under /usr/lib as happened with fail2ban bot.  So deploy virtualenv
         # while stepping into a new clean directory.
-        factory.addStep(ShellCommand(command=['mkdir', '-p', 'mk_venv']))
         venv_params = ['--distribute', '--system-site-packages', '../venv']
         if not python is None:
             venv_params = ['--python=' + python] + venv_params
         factory.addStep(ShellCommand(command=['virtualenv'] + venv_params,
-                                     workdir='mk_venv'))
+                                     workdir='build/mk_venv'))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -1683,8 +1682,7 @@ def _select_builders(builders, regex):
 def _test_easy_and_no_easy(c, regex, command, expect=True):
     for builder in _select_builders(c['builders'], regex):
         # 2nd one is virtualenv always
-        assert(builder.factory.steps[1].kwargs['command'][0] == 'mkdir')
-        assert(builder.factory.steps[2].kwargs['command'][0] == 'virtualenv')
+        assert(builder.factory.steps[1].kwargs['command'][0] == 'virtualenv')
         for step in builder.factory.steps:
             if command in step.kwargs.get('command', []):
                 if expect:
