Update master for wheel build

--- a/master.cfg
+++ b/master.cfg
@@ -120,6 +120,7 @@ xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
 arm_slaves = ['arm-raspberry-pi']
 fedora_slaves = ['i20-fed19']
+osx_wheel_slaves = ['osx-10.6-clean']
 
 # Locks to prevent resource exhaustion which might need to be defined
 # for some slaves.  It seems that locks need to be given to BuildSlave
@@ -140,6 +141,12 @@ slave_locks = {}
 add_lock(slave_locks,
          sparc_slaves_sid + sparc_slaves_wheezy + sparc_slaves,
          MasterLock("vagus", maxCount=4), 'counting')
+
+# wheel slave does awful things to /usr/local, should only run one job at a
+# time
+add_lock(slave_locks,
+         osx_wheel_slaves,
+         MasterLock("wheel-usr-local", maxCount=1), 'counting')
 
 # The 'slaves' list defines the set of recognized buildslaves. Each element is
 # a BuildSlave object, specifying a unique slave name and password.  The same
@@ -1360,6 +1367,7 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
             if minutes == 60:
                 hours += 1
                 minutes = 0
+
 # Code builders
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
@@ -1492,7 +1500,7 @@ c['builders'] += pandas_bot.build_builders(
 c['builders'] += pandas_bot.build_builders(
     (('pandas-py3.x-sid-sparc', sparc_slaves_sid),
      ('pandas-py3.x-wheezy-sparc', sparc_slaves_wheezy)),
-	post_cmds=("python3 -c 'from pandas.util.print_versions import show_versions; show_versions()'",),
+    post_cmds=("python3 -c 'from pandas.util.print_versions import show_versions; show_versions()'",),
     python='python3')
 # Statsmodels - can be tested only on recent debian releases
 c['builders'] += statsmodels_bot.build_builders(
@@ -1570,6 +1578,39 @@ c['builders'] += numpy_bot.build_builders(
      ('numpy-py3.4-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
     ))
+
+
+def wheel_factory(python_version, pip_installs, test_command, find_links=()):
+    """ Make a factory for the wheel build slave """
+    # OSX wheel builders
+    whl_fac = BuildFactory()
+    # Install fresh Python and pip
+    whl_fac.addStep(ShellCommand(command=
+        ['sudo', '/usr/local/bin/install_python.py', python_version]))
+    pip_cmd = ['pip', 'install'] + ['--find-links=' + s for s in find_links]
+    for name, version, pre_tf in pip_installs:
+        if version:
+            if pre_tf:
+                raise ValueError("cannot use pre flag with version")
+            cmd = pip_cmd + ['{0}=={1}'.format(name, version)]
+        elif pre_tf:
+            cmd = pip_cmd + ['--pre'] + name
+        else:
+            cmd = pip_cmd + [name]
+        whl_fac.addStep(ShellCommand(command=cmd))
+    whl_fac.addStep(ShellCommand(command=test_command))
+    return whl_fac
+
+
+for py_version in '2.7.6', '3.3.5', '3.4.0':
+    c['builders'].append(BuilderConfig(
+        name='scipy-{0}-wheel'.format(py_version),
+        slavenames=osx_wheel_slaves,
+        factory=wheel_factory(py_version,
+                              (('numpy', '', False),
+                               ('scipy', '', False)),
+                              nptest_command('scipy', verbose=None)
+                             )))
 
 # Assign all builders categories -- project names, to improve status visualizations
 for b in c['builders']:
@@ -1679,6 +1720,7 @@ def _select_builders(builders, regex):
     return [b for b in builders
             if r.match(b.name)]
 
+
 def _test_easy_and_no_easy(c, regex, command, expect=True):
     for builder in _select_builders(c['builders'], regex):
         # 2nd one is virtualenv always
@@ -1697,14 +1739,17 @@ def _test_easy_and_no_easy(c, regex, command, expect=True):
         raise AssertionError(
             "None of the %s builders invoked expected %s" % (prefix, command))
 
+
 def test_easy_and_no_easy(c):
     _test_easy_and_no_easy(c, '^fail2ban-.*', expect=False, command='easy_install')
     _test_easy_and_no_easy(c, '^nipy-.*', expect=True, command='easy_install')
+
 
 def test_fail2ban_08_state(c):
     builders = _select_builders(c['builders'], 'fail2ban-py2\.5-osx-10\.5-ppc.*')
     # we should still have branch suffix since it is not master
     assert(builders[0].name == 'fail2ban-py2.5-osx-10.5-ppc_0.8')
+
 
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
@@ -1716,4 +1761,3 @@ def test_regression(c):
 test_easy_and_no_easy(c)
 test_fail2ban_08_state(c)
 test_regression(c)
-
