RF: update master.cfg to use virtualenvs

--- a/master.cfg
+++ b/master.cfg
@@ -1588,6 +1588,20 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
     whl_fac.addStep(ShellCommand(command=
         ['sudo', '/usr/local/bin/install_python.py', python_version]))
     pip_cmd = ['pip', 'install'] + ['--find-links=' + s for s in find_links]
+    # Install into virtualenv
+    whl_fac.addStep(ShellCommand(command=['virtualenv', 'venv']))
+    # Now we need the venv binary directory
+    whl_fac.addStep(FileDownload('slave_scripts/bs_tools.py',
+                                 'bs_tools.py'))
+    whl_fac.addStep(SetPropertyFromCommand(
+        command= ['python', 'bs_tools.py', 'path-prepend-str', 'venv'],
+        property='venv_script_dir'))
+    whl_fac.addStep(SetPropertyFromCommand(
+        command= ['python', 'bs_tools.py', 'abspath venv'],
+        property='venv_dir'))
+    # Set env, with virtualenv in front of the path
+    env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
+    workdir = Interpolate("%(prop:venv_dir)s")
     for name, version, pre_tf in pip_installs:
         if version:
             if pre_tf:
@@ -1597,8 +1611,12 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
             cmd = pip_cmd + ['--pre'] + name
         else:
             cmd = pip_cmd + [name]
-        whl_fac.addStep(ShellCommand(command=cmd))
-    whl_fac.addStep(ShellCommand(command=test_command))
+        whl_fac.addStep(ShellCommand(command=cmd,
+                                     env=env,
+                                     workdir=workdir))
+    whl_fac.addStep(ShellCommand(command=test_command,
+                                 env=env,
+                                 workdir=workdir))
     return whl_fac
 
 
@@ -1754,8 +1772,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 162)
-    assert(len(c['schedulers']) == 220)
+    assert(len(c['builders']) == 165)
+    assert(len(c['schedulers']) == 223)
     #print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
