BF: fix workdir typo; add nose to wheel requires

--- a/master.cfg
+++ b/master.cfg
@@ -1597,7 +1597,7 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
         command= ['python', 'bs_tools.py', 'path-prepend-str', 'venv'],
         property='venv_script_dir'))
     whl_fac.addStep(SetPropertyFromCommand(
-        command= ['python', 'bs_tools.py', 'abspath venv'],
+        command= ['python', 'bs_tools.py', 'abspath', 'venv'],
         property='venv_dir'))
     # Set env, with virtualenv in front of the path
     env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
@@ -1605,7 +1605,7 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
     for name, version, pre_tf in pip_installs:
         if version:
             if pre_tf:
-                raise ValueError("cannot use pre flag with version")
+                raise ValueError("cannot use --pre flag with version")
             cmd = pip_cmd + ['{0}=={1}'.format(name, version)]
         elif pre_tf:
             cmd = pip_cmd + ['--pre'] + name
@@ -1625,7 +1625,8 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
         name='scipy-{0}-wheel'.format(py_version),
         slavenames=osx_wheel_slaves,
         factory=wheel_factory(py_version,
-                              (('numpy', '', False),
+                              (('nose', '', False),
+                               ('numpy', '', False),
                                ('scipy', '', False)),
                               nptest_command('scipy', verbose=None)
                              )))
