NF: add more speculative wheel builds

--- a/master.cfg
+++ b/master.cfg
@@ -1580,7 +1580,9 @@ c['builders'] += numpy_bot.build_builders(
     ))
 
 
-def wheel_factory(python_version, pip_installs, test_command, find_links=()):
+def wheel_factory(python_version, pip_installs,
+                  test_commands=(),
+                  find_links=()):
     """ Make a factory for the wheel build slave """
     # OSX wheel builders
     whl_fac = BuildFactory()
@@ -1594,13 +1596,13 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
     whl_fac.addStep(FileDownload('slave_scripts/bs_tools.py',
                                  'bs_tools.py'))
     whl_fac.addStep(SetPropertyFromCommand(
-        command= ['python', 'bs_tools.py', 'path-prepend-str', 'venv'],
-        property='venv_script_dir'))
+        command = ['python', 'bs_tools.py', 'path-prepend-str', 'venv'],
+        property = 'venv_script_dir'))
     whl_fac.addStep(SetPropertyFromCommand(
-        command= ['python', 'bs_tools.py', 'abspath', 'venv'],
-        property='venv_dir'))
+        command = ['python', 'bs_tools.py', 'abspath', 'venv'],
+        property = 'venv_dir'))
     # Set env, with virtualenv in front of the path
-    env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
+    env = {'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
     workdir = Interpolate("%(prop:venv_dir)s")
     for name, version, pre_tf in pip_installs:
         if version:
@@ -1614,22 +1616,29 @@ def wheel_factory(python_version, pip_installs, test_command, find_links=()):
         whl_fac.addStep(ShellCommand(command=cmd,
                                      env=env,
                                      workdir=workdir))
-    whl_fac.addStep(ShellCommand(command=test_command,
-                                 env=env,
-                                 workdir=workdir))
+    for test_command in test_commands:
+        factory.addStep(ShellCommand(command=test_command,
+                                     env=env,
+                                     workdir=workdir))
     return whl_fac
 
 
+WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
+test_commands = [nptest_command('numpy', verbose=None),
+                 nptest_command('scipy', verbose=None)]
 for py_version in '2.7.6', '3.3.5', '3.4.0':
-    c['builders'].append(BuilderConfig(
-        name='scipy-{0}-wheel'.format(py_version),
-        slavenames=osx_wheel_slaves,
-        factory=wheel_factory(py_version,
-                              (('nose', '', False),
-                               ('numpy', '', False),
-                               ('scipy', '', False)),
-                              nptest_command('scipy', verbose=None)
-                             )))
+    for find_links, pre, suffix in (((), False, 'pypi'),
+                                    ((WHEEL_SERVER,), False, 'staging'),
+                                    ((WHEEL_SERVER,), True, 'pre')):
+        c['builders'].append(BuilderConfig(
+            name='scipy-{0}-wheel-{1}'.format(py_version, suffix),
+            slavenames=osx_wheel_slaves,
+            factory = wheel_factory(py_version,
+                                    (('nose', '', pre),
+                                     ('numpy', '', pre),
+                                     ('scipy', '', pre)),
+                                    test_commands = test_commands,
+                                    find_links = find_links)))
 
 # Assign all builders categories -- project names, to improve status visualizations
 for b in c['builders']:
@@ -1773,9 +1782,9 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 165)
-    assert(len(c['schedulers']) == 223)
-    #print [sc.name for sc in c['schedulers']]
+    assert(len(c['builders']) == 171)
+    assert(len(c['schedulers']) == 230)
+    # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
 test_fail2ban_08_state(c)
