BF: fix bug in creating command list

--- a/master.cfg
+++ b/master.cfg
@@ -1610,7 +1610,7 @@ def wheel_factory(python_version, pip_installs,
                 raise ValueError("cannot use --pre flag with version")
             cmd = pip_cmd + ['{0}=={1}'.format(name, version)]
         elif pre_tf:
-            cmd = pip_cmd + ['--pre'] + name
+            cmd = pip_cmd + ['--pre'] + [name]
         else:
             cmd = pip_cmd + [name]
         whl_fac.addStep(ShellCommand(command=cmd,
