RF: oops, forgot renaming of factory variable

--- a/master.cfg
+++ b/master.cfg
@@ -1617,7 +1617,7 @@ def wheel_factory(python_version, pip_installs,
                                      env=env,
                                      workdir=workdir))
     for test_command in test_commands:
-        factory.addStep(ShellCommand(command=test_command,
+        whl_fac.addStep(ShellCommand(command=test_command,
                                      env=env,
                                      workdir=workdir))
     return whl_fac
