ENH: sendToInterestedUsers seemed do nothing for seaborn, adding Michael explicitely

--- a/master.cfg
+++ b/master.cfg
@@ -1600,8 +1600,8 @@ c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
 c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
                       categories=('seaborn',),
-                      sendToInterestedUsers=True,
-                      extraRecipients=['site-buildbot-nipy@onerussian.com']))
+                      sendToInterestedUsers=False,
+                      extraRecipients=['site-buildbot-nipy@onerussian.com', 'mwaskom@stanford.edu']))
 
 c['status'].append(mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
