NF: add h5py tests

--- a/master.cfg
+++ b/master.cfg
@@ -1624,8 +1624,16 @@ def wheel_factory(python_version, pip_installs,
 
 
 WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
+h5_test_cmd = ['python', '-c',
+               'import sys; '
+               'import unittest; '
+               'suite = unittest.TestLoader().discover("h5py"); '
+               'res = unittest.TextTestRunner(verbosity=3).run(suite); '
+               'sys.exit(not res.wasSuccessful)']
 test_commands = [nptest_command('numpy', verbose=None),
-                 nptest_command('scipy', verbose=None)]
+                 nptest_command('scipy', verbose=None),
+                 h5_test_cmd]
+
 for py_version in '2.7.6', '3.3.5', '3.4.0':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
@@ -1636,7 +1644,8 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
             factory = wheel_factory(py_version,
                                     (('nose', '', pre),
                                      ('numpy', '', pre),
-                                     ('scipy', '', pre)),
+                                     ('scipy', '', pre),
+                                     ('h5py', '', pre)),
                                     test_commands = test_commands,
                                     find_links = find_links)))
 
