RF: remove build directory before installs

--- a/master.cfg
+++ b/master.cfg
@@ -1586,6 +1586,9 @@ def wheel_factory(python_version, pip_installs,
     """ Make a factory for the wheel build slave """
     # OSX wheel builders
     whl_fac = BuildFactory()
+    # Delete previous build products
+    whl_fac.addStep(ShellCommand(command=
+        ['rm', '-rf', 'venv', 'bs_tools.py']))
     # Install fresh Python and pip
     whl_fac.addStep(ShellCommand(command=
         ['sudo', '/usr/local/bin/install_python.py', python_version]))
