RF: extend wheel tests to scipy stack
But only test sympy partially - tests are too slow to do the whole thing.

--- a/master.cfg
+++ b/master.cfg
@@ -1627,27 +1627,47 @@ def wheel_factory(python_version, pip_installs,
 
 
 WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
+mpl_test_cmd = ['python', '-c',
+                'import sys; '
+                'import matplotlib; '
+                'sys.exit(not matplotlib.test())']
 h5_test_cmd = ['python', '-c',
                'import sys; '
                'import unittest; '
                'suite = unittest.TestLoader().discover("h5py"); '
                'res = unittest.TextTestRunner(verbosity=3).run(suite); '
                'sys.exit(not res.wasSuccessful)']
+sympy_whl_test_cmd = ['python', '-c',
+                   'import sys; '
+                   'import sympy; '
+                   'open("matplotlibrc", "wt").write("backend : agg"); '
+                   't=sympy.test("/core"); ' # too slow for full tests
+                   'sys.exit(not (dt and t))']
 test_commands = [nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
-                 h5_test_cmd]
+                 mpl_test_cmd,
+                 nptest_command('IPython', verbose=None),
+                 nptest_command('numexpr', verbose=None),
+                 ['nosetests', 'pandas'],
+                 h5_test_cmd,
+                 sympy_whl_test_cmd]
 
 for py_version in '2.7.6', '3.3.5', '3.4.0':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
                                     ((WHEEL_SERVER,), True, 'pre')):
         c['builders'].append(BuilderConfig(
-            name='scipy-{0}-wheel-{1}'.format(py_version, suffix),
+            name='scipy-stack-{0}-wheel-{1}'.format(py_version, suffix),
             slavenames=osx_wheel_slaves,
             factory = wheel_factory(py_version,
                                     (('nose', '', pre),
                                      ('numpy', '', pre),
                                      ('scipy', '', pre),
+                                     ('matplotlib', '', pre),
+                                     ('numexpr', '', pre),
+                                     ('pandas', '', pre),
+                                     ('sympy', '', pre),
+                                     ('ipython[notebook]', '', pre),
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
                                     find_links = find_links)))
