RF: refining the wheel build chain

--- a/master.cfg
+++ b/master.cfg
@@ -1631,6 +1631,10 @@ mpl_test_cmd = ['python', '-c',
                 'import sys; '
                 'import matplotlib; '
                 'sys.exit(not matplotlib.test())']
+numexpr_test_cmd = ['python', '-c',
+                 'import sys; '
+                 'import numexpr; '
+                 'sys.exit(not numexpr.test())']
 h5_test_cmd = ['python', '-c',
                'import sys; '
                'import unittest; '
@@ -1641,15 +1645,14 @@ sympy_whl_test_cmd = ['python', '-c',
                    'import sys; '
                    'import sympy; '
                    'open("matplotlibrc", "wt").write("backend : agg"); '
-                   't=sympy.test("/core"); ' # too slow for full tests
-                   'sys.exit(not (dt and t))']
+                   'sys.exit(sympy.test("/core"))'] # too slow for full tests
 test_commands = [nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
                  mpl_test_cmd,
-                 nptest_command('IPython', verbose=None),
-                 nptest_command('numexpr', verbose=None),
+                 ['iptest'],
                  ['nosetests', 'pandas'],
                  h5_test_cmd,
+                 numexpr_test_cmd,
                  sympy_whl_test_cmd]
 
 for py_version in '2.7.6', '3.3.5', '3.4.0':
@@ -1667,7 +1670,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
                                      ('numexpr', '', pre),
                                      ('pandas', '', pre),
                                      ('sympy', '', pre),
-                                     ('ipython[notebook]', '', pre),
+                                     ('ipython[notebook,test]', '', pre),
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
                                     find_links = find_links)))
