NF: add requirements file test

--- a/master.cfg
+++ b/master.cfg
@@ -1655,6 +1655,7 @@ test_commands = [nptest_command('numpy', verbose=None),
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
 
+wheel_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
 for py_version in '2.7.6', '3.3.5', '3.4.0':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
@@ -1674,6 +1675,16 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
                                     find_links = find_links)))
+    c['builders'].append(BuilderConfig(
+        name='scipy-stack-{0}-wheel-requires'.format(py_version),
+        slavenames=osx_wheel_slaves,
+        factory = wheel_factory(py_version,
+                                (('nose', '', False),
+                                 (wheel_requires, '', False),
+                                 ('ipython[test]', '', False)),
+                                test_commands = test_commands,
+                                find_links = ())))
+
 
 # Assign all builders categories -- project names, to improve status visualizations
 for b in c['builders']:
@@ -1817,8 +1828,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 171)
-    assert(len(c['schedulers']) == 229)
+    assert(len(c['builders']) == 174)
+    assert(len(c['schedulers']) == 232)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
