Add requirements flag to wheel building function

--- a/master.cfg
+++ b/master.cfg
@@ -1609,14 +1609,14 @@ def wheel_factory(python_version, pip_installs,
     workdir = Interpolate("%(prop:venv_dir)s")
     for name, version, pre_tf in pip_installs:
         if version:
-            if pre_tf:
+            if version == '-r':
+                names = ['-r', name]
+            elif pre_tf:
                 raise ValueError("cannot use --pre flag with version")
-            cmd = pip_cmd + ['{0}=={1}'.format(name, version)]
-        elif pre_tf:
-            cmd = pip_cmd + ['--pre'] + [name]
-        else:
-            cmd = pip_cmd + [name]
-        whl_fac.addStep(ShellCommand(command=cmd,
+            names = ['{0}=={1}'.format(name, version)]
+        if pre_tf:
+            names = ['--pre'] + names
+        whl_fac.addStep(ShellCommand(command=pip_cmd + names,
                                      env=env,
                                      workdir=workdir))
     for test_command in test_commands:
@@ -1680,7 +1680,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
         slavenames=osx_wheel_slaves,
         factory = wheel_factory(py_version,
                                 (('nose', '', False),
-                                 (wheel_requires, '', False),
+                                 (wheel_requires, '-r', False),
                                  ('ipython[test]', '', False)),
                                 test_commands = test_commands,
                                 find_links = ())))
