BF: fix bugs with setting names

--- a/master.cfg
+++ b/master.cfg
@@ -1613,7 +1613,10 @@ def wheel_factory(python_version, pip_installs,
                 names = ['-r', name]
             elif pre_tf:
                 raise ValueError("cannot use --pre flag with version")
-            names = ['{0}=={1}'.format(name, version)]
+            else:
+                names = ['{0}=={1}'.format(name, version)]
+        else:
+            names = [name]
         if pre_tf:
             names = ['--pre'] + names
         whl_fac.addStep(ShellCommand(command=pip_cmd + names,
@@ -1679,9 +1682,9 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
         name='scipy-stack-{0}-wheel-requires'.format(py_version),
         slavenames=osx_wheel_slaves,
         factory = wheel_factory(py_version,
-                                (('nose', '', False),
-                                 (wheel_requires, '-r', False),
-                                 ('ipython[test]', '', False)),
+                                ((wheel_requires, '-r', False),
+                                 ('nose', '', False),
+                                 ('mock', '', False)),
                                 test_commands = test_commands,
                                 find_links = ())))
 
